--- a/website/login page.html
+++ b/website/login page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,17 +31,12 @@
         }
         .login-popup{
             text-align: center;
-            position: absolute;
             z-index: 1;
-	        top:0;
-	        bottom: 0;
-	        left: 0;
-	        right: 0;
-            width: 300px;
-            height: 80%;
-	        margin: 0px;
+            margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+            width: 30%;
             border-radius: 20px;
             background-color: rgb(59, 61, 63);
+            padding: 1%;
         }
         .login-button{
             text-align: center;
@@ -62,21 +56,27 @@
             outline: none;
             background-color:rgb(44, 16, 146);
         }
-       /* .bg{
-            width:100%;
-            height:100%;
-            position:absolute;
-            top:0; 
-            left:0; 
-            z-index:-2; 
-            opacity:0.5; 
-            background-color: black;
-        }*/
+
+        /* Add Fade In Animation */
+        .animate {
+        -webkit-animation: fadein 1s;
+        animation: fadein 1s;
+        }
+
+        @-webkit-keyframes fadein {
+        from {opacity: 0;} 
+        to {opacity: 1;}
+        }
+        
+        @keyframes fadein {
+        from {opacity: 0;} 
+        to {opacity: 1;}
+        }
     </style>
 </head>
 <body>
-    <div class="bg"></div>
-    <div class="login-popup">
+    
+    <div class="login-popup animate">
         <div class="container">
             User Name<br>
             <input type="text" placeholder="Enter User Name">
