Changed color and added background in home

--- a/website/home.html
+++ b/website/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href = "style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -31,10 +32,27 @@
 </head>
 
 <body>
-    <h1>Restaurant</h1>
+    <header>
+
+
+    <!-- <h1>Restaurant</h1> -->
     <button class="btn" onclick="document.getElementById('frame').style.display='block'">Login</button>
     <div id="frame">
         <iframe id ="popup" src="login page.html">
         </iframe>
     </div>
+
+    <div class="name">
+        <a href="">RESTAURANT</a>
+
+        <div class="button">
+            <button1 href="" class="btn one">See Menu</button1>
+            <button1 href="" class="btn one">Order Online</button1>
+            <button1 href="" class="btn one">Reservation</button1>
+
+        </div>
+    </div>
+
+
+    </header>
 </body>
