--- a/website/login page.html
+++ b/website/login page.html
@@ -10,6 +10,8 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color:aliceblue;
         }
+
+
    
         input[type=text], input[type=password]{
             text-align: center;
@@ -33,28 +35,30 @@
             text-align: center;
             z-index: 1;
             margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-            width: 30%;
+            width: 20%;
             border-radius: 20px;
-            background-color: rgb(59, 61, 63);
-            padding: 1%;
+            background: rgba(218, 8, 36, 0.7);
+            padding: 20px 10px 170px 10px;
         }
         .login-button{
             text-align: center;
             padding:12px 20px;
             margin-top: 8px;
             border-radius: 25px;
-            width:70%;
+            width:50%;
             box-sizing: border-box;
-            background-color:rgb(59, 26, 182);
+            background-color: black;
             color: white;
             border-color: transparent;
         }
         button:hover{
-            opacity: 0.8;
+            background-color: white;
+            color: red;
         }
         button:focus{
             outline: none;
-            background-color:rgb(44, 16, 146);
+            background-color:rgb(27, 9, 18);
+            color: white;
         }
 
         /* Add Fade In Animation */
