added exit button; changed bg color of login btn

--- a/website/home.html
+++ b/website/home.html
@@ -40,6 +40,7 @@
     <div id="frame">
         <iframe id ="popup" src="login page.html">
         </iframe>
+        <button class = "exitbutton" onclick="document.getElementById('frame').style.display='none'">×</button>
     </div>
 
     <div class="name">
