added exit button; changed bgcolor of login button

--- a/website/login page.html
+++ b/website/login page.html
@@ -10,8 +10,9 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color:aliceblue;
         }
-
-
+        html{
+            overflow: hidden;
+        }
    
         input[type=text], input[type=password]{
             text-align: center;
