--- a/website/home.html
+++ b/website/home.html
@@ -180,9 +180,10 @@
         width: 20%;
         border-radius: 20px;
         background: rgba(218, 8, 36);
-        padding: 20px 10px 200px 10px;
-        margin-left:37%;
-        margin-top: 5%;
+        background-image: linear-gradient(to bottom right, red, yellow);
+        padding: 20px 10px;
+        margin: 5% 37%;
+        height: 70%;
     }
     .login-button{
         text-align: center;
@@ -248,6 +249,7 @@
                     </div>
                     <input type="checkbox">Remember my user name.<br>
                     <button class="login-button">Login</button>
+                    <br>Don't have an account? <a href="sign up.html">Sign Up</a>
                 </div>
                 
             </div>
