--- a/website/home.html
+++ b/website/home.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HomePage</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <style>
+    *{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
     html ,body, .flex{
         height: 100%;
     }
@@ -129,16 +133,16 @@
 
     .exitbutton{
         float: right;
-        font-size: 20px;
+        font-size: 26px;
         width: 40px;
         height: 40px;
         margin:0;
         border:none;
-        color:white;
+        color:#bf2828;
         background-color: transparent;
         z-index: 2;
         position: fixed;
-        right: 42.5%;
+        right: 25%;
         top: 80px;
     }
     .exitbutton:hover{
@@ -158,32 +162,34 @@
         border-radius: 25px;
         width:100%;
         box-sizing: border-box;
-        color:rgb(44, 16, 146);
+        color:#bf2828;
         border-color: transparent;
+        background-color: rgb(255, 255, 255);
     }
     input[type=text]:focus, input[type=password]:focus{
         outline: none;
-        border-color:rgb(44, 16, 146);
+        border-color:#bf2828;
     }
     input[type=checkbox]:focus{
-        outline:2px solid rgb(44, 16, 146);
+        outline:2px solid #bf2828;
         outline-offset: -2px;
     }
     .container{
         text-align: left;
         padding: 15px;
+        width: 50%;
     }
     .login-popup{
         text-align: center;
         z-index: 2;
         position: relative;
-        width: 20%;
+        width: 50%;
+        height: 75%;
         border-radius: 20px;
-        background: rgba(218, 8, 36);
-        background-image: linear-gradient(to bottom right, red, yellow);
+        background: rgb(238, 234, 234);
         padding: 20px 10px;
-        margin: 5% 37%;
-        height: 70%;
+        margin-top: 5%;
+        margin-left: 25%;
     }
     .login-button{
         text-align: center;
@@ -198,7 +204,7 @@
     }
     button:hover{
         background-color: white;
-        color: red;
+        color: #bf2828;
     }
     button:focus{
         outline: none;
@@ -238,7 +244,7 @@
         <div id="frame">
             <div class = "modal">
                 <div class="login-popup animate">
-                    <button class="exitbutton" onclick=fadeout()>×</button>
+                    <b><button class="exitbutton" onclick=fadeout()>×</button>
                     <div class="container">
                         User Name<br>
                         <input type="text" placeholder="Enter User Name">
@@ -247,9 +253,13 @@
                         Password<br>
                         <input type="password" placeholder="Enter Password">
                     </div>
-                    <input type="checkbox">Remember my user name.<br>
-                    <button class="login-button">Login</button>
-                    <br>Don't have an account? <a href="sign up.html">Sign Up</a>
+                    </b>
+                    <div class="container" style="text-align: center">
+                        <input type="checkbox">Remember me<br>
+                        <button class="login-button">Login</button>
+                        <br><br><a class="forgot-pass" href="javascript:void(0);">Forgot Password?</a>
+                        <br>Don't have an account? <a href="sign up.html">Sign Up</a>
+                    </div>
                 </div>
                 
             </div>
@@ -311,6 +321,9 @@
             if (key === "Escape") {
                 fadeout();
             }
+        });
+        $(".forgot-pass").click(function(){
+            $(".forgot-pass").hide(1000);
         });
     </script>
 </body>
