--- a/website/sign up.html
+++ b/website/sign up.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <h1 class="text-left"> Restaurant Registration Form</h1>
+                    <h1 class="text-left"> Restaurant Log In</h1>
                     <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
@@ -104,7 +104,7 @@
                 <div class="col-md-5">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="text-left">Registration Form</h3>
+                            <h3 class="text-left">Log In</h3>
                         </div>
                         <div class="col-md-6">
                             <span class="glyphicon glyphicon-pencil"></span>
@@ -123,14 +123,8 @@
                                 <input type="checkbox"> <small> Remember me</small>
                             </div>
                         </div>
-                        <div class="row">
-                                <label class="labe col-md-2 control-label">Message </label>
-                                <div class="col-md-10">
-                                    <textarea class="form-control"></textarea>
-                                </div>
-                        </div>
-                        <a href="#"><div class="btn btn-info">Submit</div></a>
-                        <a href="#"><div class="btn btn-warning">Cancel</div></a>
+                        <a href="#"><div class="btn btn-info">Log In</div></a>
+                        <a href="#"><div class="btn btn-warning">Sign Up</div></a>
                 </div>
             </div>
         </div>
