--- a/website/about/contact.html
+++ b/website/about/contact.html
@@ -14,16 +14,17 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="../login.css">
-    <link rel="stylesheet" href="../sidebar.css">
-    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/contactlayout.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <title>About Us</title>
 <style>
     *{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
 
     body {
         font-family: 'Poppins', sans-serif;
@@ -74,33 +75,7 @@
         background-color: violet;
     }
 
-    .body{
-        width:100%;
-        display:flex;
-        flex-direction: column;
-    }   
-    .body>.mainbody1{
-        display:flex;
-        flex-direction:column;
-        height:80%;
-    }
-    .body>.mainbody1>#section1-1{
-        width:100%;
-        height:33.33%
-    }
 
-    .body>.mainbody1>#section1-2{
-        width:100%;
-        height:33.33%;
-    }   
-
-    .body>.mainbody1>#section1-3{
-        width:100%;
-        height:33.33%;
-    }
-    .body>.mainbody1>.section1{
-        text-align: center;
-    }
 
     .foot-style{
         text-align: center; 
@@ -139,6 +114,44 @@
                 </li>
             </ul>
         </nav>  
+        <div id="frame">
+            <div class = "modl">
+                <button class="exitbutton" onclick=fadeout()>×</button>
+                <div class="login-popup animate">
+                    <b>
+                    <div class="login-container login-picture"></div>
+                    <div class="login-container">
+                        User Name<br>
+                        <input type="text" placeholder="Enter User Name">
+                    </div>
+                    <div class="login-container">
+                        Password<br>
+                        <input type="password" placeholder="Enter Password">
+                    </div>
+                    </b>
+                    <div class="login-container" style="text-align: center">
+                        <input type="checkbox">Remember me<br>
+                        <button class="login-button">Login</button>
+                        <br><br><a id="forgot-pass" href="javascript:void(0);">Forgot Password?</a>
+                        <br>Don't have an account? <a href="sign up.html">Sign Up</a>
+                    </div>
+                </div>
+                <div class="forgot-password">
+                    <b>
+                    <div class="login-container login-picture" style="float: left"></div>
+                    <div class="login-container" style="float: right;">
+                        Enter your User Name:<br>
+                        <input type="text" placeholder="Enter User Name">
+                    </div>
+                    </b>
+                    <div class="login-container" style="float: right; text-align: center">
+                        <button class="login-button" style="width: auto">Send me an email!</button>
+                        <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
+                        <br>Don't have an account? <a href="../sign up.html">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="body container-fluid"> <!--header or search bar -->
             <div class=" mt-4">
                 <div class="row justify-content-between">
@@ -161,7 +174,7 @@
                     <div id="header-component" class="col-lg-6">
                         <div id="profile">
                             <h5 class="pt-2"> FirstName LastName </h5> &nbsp; &nbsp;
-                            <img src="../avatar.png" >
+                            <img src="../photos/avatar.png" >
                         </div>
                     </div>
                 </div>
@@ -180,31 +193,7 @@
             </div>
         </div>
     </div>
-    <script>
-        var s = document.getElementById('frame').style;
-        function fadein(){
-            s.opacity= 1;
-            s.display="block";
-        };
-        function fadeout(){
-            s.opacity = 1;
-            (function fade(){(s.opacity-=.1)==0?s.display="none":setTimeout(fade,40)})();
-        };
-        document.addEventListener('keydown', function(event) {
-            const key = event.key; // Or const {key} = event; in ES6+
-            if (key === "Escape") {
-                fadeout();
-            }
-        });
-        $("#forgot-pass").click(function(){
-            $(".login-popup").slideUp(500);
-            $(".forgot-password").slideDown(500);
-        });
-        $("#backtoLogin").click(function(){
-            $(".forgot-password").slideUp(500);
-            $(".login-popup").slideDown(500);
-        });
-    </script>
+    <script src="../js/login.js"></script>
 </body>
 <!-- Footer -->
 <footer class="foot-style">
@@ -258,27 +247,7 @@
         <a href="home.html"> FoodReviews.com</a>
         </div>
         <!-- Copyright -->
-        <script>
-            $(window).scroll(function() {
-                if($(window).scrollTop() + $(window).height() > $(document).height() - 10) {
-                    $(".foot-style").css({
-                        "background": "#bf2828",
-                        "transition": "background ease-in 0ms"
-                    });
-                }
-                if($(window).scrollTop() + $(window).height() <= $(document).height() - 50){
-                    $(".foot-style").css({
-                        "background": "linear-gradient(transparent, #bf2828)",
-                        "transition": "background ease-in 500ms"
-                    });
-                }
-            });
-            $(document).ready(function () {
-                $('#sidebarCollapse').on('click', function () {
-                    $('#sidebar').toggleClass('active');
-                });
-            });
-        </script>
+        <script src="../js/footer.js"></script>
     </footer>
     <!-- Footer -->
 </html>
