--- a/website/sign up.html
+++ b/website/sign up.html
@@ -14,9 +14,10 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
         <!-- Our Custom CSS -->
-        <link rel="stylesheet" href="login.css">
-        <link rel="stylesheet" href="sidebar.css">
-        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/sidebar.css">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/footer.css">
         <title>Sign Up</title>
         <style>
             *{
