--- a/website/sign up.html
+++ b/website/sign up.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/homelayout.css">
         <link rel="stylesheet" href="css/footer.css">
+        <title>Sign Up</title>
         <style>
             *{
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -155,7 +156,7 @@
                     </div>
                     <div class="form-group form-check">
                         <label class="form-check-label">
-                          <input class="form-check-input" type="checkbox" name="Agree"> I agree to the <b>Terms of User</b>
+                          <input class="form-check-input" type="checkbox" name="Agree"> I agree to the <b>Terms of Use</b> and <b>Privacy Policy.</b>
                         </label>
                       </div>
                     <button type="submit" 
