--- a/website/sign up.html
+++ b/website/sign up.html
@@ -12,7 +12,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="stylesignup.css">
         <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/header.css">
@@ -60,16 +59,6 @@
             align-items: stretch;
             }
             
-            .btn{
-                border:none;
-                background-color: blueviolet;
-                margin:15px;
-                font-size: 25px;
-                width:100%;
-                margin-left: 0px;
-                color:white;
-            }
-
             .btn:hover{
                 background-color: violet;
             }
@@ -102,6 +91,7 @@
                 z-index:1;
             }
         </style>
+        <link rel="stylesheet" href="stylesignup.css">
     </head>
     <body>
         <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
@@ -125,6 +115,33 @@
                     </li>
                 </ul>
             </nav>
+            <div class="body container-fluid"> <!--header or search bar -->
+                <div class=" mt-4">
+                    <div class="row justify-content-between">
+                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                            <button type="button" id="sidebarCollapse" class="btn btn-info">
+                                <i class="fas fa-align-left"></i>
+                            </button>
+                        </nav>
+                        <div id="header-component" class="col-lg-6">
+                            <form action="" class="form">
+                                <div class="form-group">
+                                    <i class="fa fa-search" id="search-icon"></i>
+                                    <input type="text" 
+                                           class="form-control" 
+                                           name="search" 
+                                           placeholder="Search">
+                                </div>
+                            </form>
+                        </div>
+                        <div id="header-component" class="col-lg-6">
+                            <div id="profile">
+                                <h5 class="pt-2"> FirstName LastName </h5> &nbsp; &nbsp;
+                                <img src="photos/avatar.png" >
+                            </div>
+                        </div>
+                    </div>
+                </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-3"></div>
@@ -171,8 +188,8 @@
                             Sign up with Facebook
                     </button>
                     <button type="button" 
-                            id="btn-google"
-                            class="btn btn-googlr">
+                            class="btn btn-googlr"
+                            id="btn-google">
                             <i class="fab fa-google pr-1"></i> 
                             Sign up with Google
                     </button>
@@ -181,6 +198,7 @@
                 <div class="col-lg-3"></div>
             </div>
         </div>
+    </div>
     </div>
     </body>
     <!-- Footer -->
