--- a/website/home.html
+++ b/website/home.html
@@ -91,6 +91,7 @@
         margin-top: 250px;
         background-color: #ffffff;
         opacity: 0.5;
+        overflow:scroll;
     }
     .blob1{
         position: absolute;
@@ -112,6 +113,7 @@
 
 <body>
     <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
+    <img class="blob2"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
     <div class="flex1">
     <div class="flex">
             <!-- <div class="sampleblob"></div> -->
