--- a/website/sign up.html
+++ b/website/sign up.html
@@ -13,6 +13,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="stylesignup.css">
         <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/homelayout.css">
@@ -91,7 +92,6 @@
                 z-index:1;
             }
         </style>
-        <link rel="stylesheet" href="stylesignup.css">
     </head>
     <body>
         <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
@@ -177,7 +177,7 @@
                       </div>
                     <button type="submit" 
                             id="btn-submit"
-                            class="btn btn-block btn-info">
+                            class="btn btn-block btn-info btn-submit">
                         <h6>SIGN UP</h6>
                     </button>
                     <hr class="new">
