--- a/website/sign up.html
+++ b/website/sign up.html
@@ -91,6 +91,9 @@
                 background-color: purple;
                 z-index:1;
             }
+            .mt-4, .my-4 {
+                margin-bottom:100px;
+            }
         </style>
         <link rel="stylesheet" href="stylesignup.css">
     </head>
