--- a/website/sign up.html
+++ b/website/sign up.html
@@ -178,7 +178,7 @@
                       </div>
                     <button type="submit" 
                             id="btn-submit"
-                            class="btn btn-block btn-info">
+                            class="btn btn-block btn-info btn-submit">
                         <h6>SIGN UP</h6>
                     </button>
                     <hr class="new">
