--- a/website/sign up.html
+++ b/website/sign up.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/homelayout.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/stylesignup.css">
         <title>Sign Up</title>
         <style>
             *{
@@ -92,7 +93,7 @@
                 z-index:1;
             }
         </style>
-        <link rel="stylesheet" href="stylesignup.css">
+        
     </head>
     <body>
         <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
