--- a/website/home.html
+++ b/website/home.html
@@ -97,6 +97,20 @@
         left:50px;
         width:500px;
     }
+    .blob2 {
+    position: absolute;
+    right: -253px;
+    bottom: 100px;
+    width: 667px;
+    }  
+    .blob3 {
+
+    position: absolute;
+    left: 379px;
+    bottom: -197px;
+    width: 300px;
+
+    }
     .sampleblob{
         height:500px;
         border-radius:24% 76% 27% 73% / 46% 30% 70% 54%;
@@ -108,7 +122,8 @@
 
 <body>
     <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
-
+    <img class="blob2"src="Background.svg"></img>
+    <img class="blob3"src="yellow.svg"></img>
     <div class="flex">
             <!-- <div class="sampleblob"></div> -->
         <nav id="sidebar">
